update readme and re-generate swagger
